gtk/sass/3.20/_common.scss
/* ... */
filechooser {
  .dialog-action-box { border-top: 1px solid $borders_color; }

  #pathbarbox { border-bottom: 1px solid $bg_color; }
}

filechooserbutton:drop(active) {
  box-shadow: none;
  border-color: transparent;
}


/***********
 * Sidebar *
 ***********/

.sidebar {
  border: none;
  color: $secondary_fg_color;

  &, list { // draw shadows
     &:dir(ltr) { box-shadow: if($variant == 'light', $sidebar-light-ltr,
                                                      $sidebar-dark-ltr);
    }
    &:dir(rtl) { box-shadow: if($variant == 'light', $sidebar-light-rtl,
                                                     $sidebar-dark-rtl);
    }
  }

  // remove background from child-elements
  treeview.view,
  .frame,
  list { background-color: transparent; }

  treeview.view {
    box-shadow: none;
    &:selected,
    row:selected { @extend %selected_items; }
  }

  // fill actual background
  background-color: $secondary_dark_color;
  .frame list { box-shadow: none; }

  list,
  row,
  row.activatable {
    color: $secondary_fg_color;
    background-color: transparent;
    font-weight: 500;
    &:hover { color: $fg_color; }
    &:selected {
      color: $selected_bg_color;
      background-color: transparent;

      label { color: $selected_bg_color; }
    }
  }

  // disable shadows on overshoot/undershoot area
  // of gtk3-demo's sidebar
  overshoot,
  undershoot { box-shadow: none; }
}

stacksidebar {
  row,
  row.activatable {
    padding: rem(2.7px) rem(8px) rem(4px);

    > label {
      padding-left: rem(5.3px);
      padding-right: rem(5.3px);
    }

    color: $secondary_fg_color;
    background-color: transparent;
    font-weight: 500;
    &:hover { color: $fg_color; }
    &:selected {
      color: $selected_bg_color;
      background-color: transparent;

      label { color: $selected_bg_color; }
    }
    &:backdrop { opacity: 1.0; }

    &.needs-attention > label { @extend %needs_attention; }
  }

  .frame list { // draw shadows
    // dim background with alpha-blending
    background-color: if($variant == 'light', rgba(12, 18, 0, 0.01),
                                              rgba(18, 22, 0, 0.04));

    &:dir(ltr) { box-shadow: if($variant == 'light', $sidebar-light-ltr,
                                                     $sidebar-dark-ltr);
    }
    &:dir(rtl) { box-shadow: if($variant == 'light', $sidebar-light-rtl,
                                                     $sidebar-dark-rtl);
    }
  }

  // remove unwanted separator
  separator,
  .separator {
    @extend separator.wide;
    min-height: 0;
    border-color: transparent;
    background-color: transparent;
    color: transparent;
  }
}


/****************
 * File chooser *
 ****************/

placessidebar {
  @extend scrolledwindow; // needs for overshoot / undershoot

  list,
  row {
    // Background color for Nautilus and FileChooser sidebar
    background-color: $secondary_dark_color;
  }

  row {
    // Needs overriding of the GtkListBoxRow padding
    padding: rem(2.7px) 0 rem(4px);

    // Using margins/padding directly in the row
    // will make the animation of the new bookmark row jump
    & > revealer {
      padding: rem(4px) rem(14px) rem(4px) rem(12px);
    }

    & image.sidebar-icon {
      opacity: 0.75; // dim the device icons
      &:dir(ltr) { padding-right: rem(5.3px); }
      &:dir(rtl) { padding-left: rem(5.3px); }
    }

    & label.sidebar-label {
      &:dir(ltr) { padding-right: rem(2px); }
      &:dir(rtl) { padding-left: rem(2px); }
    }

    button {
      &.image-button { // Eject button for removable storages
        padding: rem(4px); // Same as of placessidebar row
        @extend button.flat;
      }
    }

    &:selected {
      color: $selected_bg_color;

      label { color: $selected_bg_color; }

      button.image-button {
        color: $secondary_selected_bg_color;
        &:hover,
        &:active { color: $selected_bg_color; }
      }
    }

    // in the sidebar case it makes no sense to click the selected row
    // &:selected:active { box-shadow: none; }

    // looks like the label doesn't get all the states so work around
    &:selected:disabled label { @extend %selected_items:disabled; }
    // &:selected:backdrop:disabled label {
    //   @extend %selected_items:backdrop:disabled;
    // }

    &.sidebar-placeholder-row {
      border: solid 1px $selected_bg_color;
    }

    &.sidebar-new-bookmark-row {
      color: $selected_bg_color;
    }

    &:drop(active):not(:disabled) {
      color: $drop_target_color;
      box-shadow: inset 0 1px $drop_target_color,
                  inset 0 -1px $drop_target_color;

      &:selected {
        color: $selected_fg_color;
        background-color: $drop_target_color;
      }
    }
  }
}

placesview {
  .server-list-button > image {
  }

  .server-list-button:checked > image {
  }

  row.activatable:hover { background-color: transparent; }

  // this selects the "connect to server" label
  > actionbar > revealer > box > label {
    padding-left: rem(8px);
    padding-right: rem(8px);
  }
}
/* ... */

